[project]
name = "hack-guvi"
version = "0.1.0"
description = "Agentic Honey-Pot for Scam Detection & Intelligence Extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
honeypot = "main:run"

[tool.ruff]
line-length = 100
target-version = "py313"
